@startuml

/' -------------------------------------------------
   ENTITIES
   ------------------------------------------------- '/

entity Users {
  +int Id <<PK>>
  --
  string   FirstName
  string   LastName
  string   Email
  string   PasswordHash
  int        Role            <<enum UserRole>>
  string? PhoneNumber
  bool     WantsNotifications
  string   Street
  string   HouseNumber
  string   PostalCode
  string   City
}

entity Incidents {
  +int Id <<PK>>
  --
  string            Title
  string?           Description
  decimal         Latitude
  decimal         Longitude
  datetime       CreatedAt
  int                 Status        <<enum IncidentStatus>>
  int                 Priority      <<enum PriorityLevel>>
  datetime?     Deadline
  datetime?     HandledAt
  int?               CreatedByUserId <<FK>>
  bool              HandledByExternal
  int?               HandledByUserId  <<FK>>
  string?          Notes
}

entity IncidentPhotos {
  +int Id <<PK>>
  --
  int      IncidentId  <<FK>>
  string PhotoUrl
}

entity IncidentStatusHistory {
  +int Id <<PK>>
  --
  int            IncidentId     <<FK>>
  string       Status
  int            ChangedByUserId <<FK>>
  datetime  ChangedAt
}

/' -------------------------------------------------
   RELATIONS (conform Fluent API)
   ------------------------------------------------- '/

' 1  User (creator) ---< Incident
Users       ||--o{ Incidents           : creates

' 2  User (handler) ---< Incident   (zelfde tabel, andere rol)
Users       ||--o{ Incidents           : handles

' 3  User ---< IncidentStatusHistory
Users       ||--o{ IncidentStatusHistory : changes status

' 4  Incident ---< IncidentPhotos
Incidents   ||--o{ IncidentPhotos

' 5  Incident ---< IncidentStatusHistory
Incidents   ||--o{ IncidentStatusHistory

@enduml
